crates/ruma-events/tests/it/ui/15-content-invalid-double-kind.stderr
error: only account data can have two kinds
 --> tests/it/ui/15-content-invalid-double-kind.rs:6:48
  |
6 | #[derive(Clone, Debug, Deserialize, Serialize, EventContent)]
  |                                                ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EventContent` (in Nightly builds, run with -Z macro-backtrace for more info)
